fixed compilation error

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -56,7 +56,7 @@
     \affaddr{Saarland University} \\
     \affaddr{Department of Computer Science} \\
     \affaddr{Saarbruecken, Germany} \\
-    \affaddr{marc_schweig@gmx.de} } }
+    \affaddr{marc\_schweig@gmx.de} } }
 
 % Paper metadata (use plain text, for PDF inclusion and later
 % re-using, if desired)
@@ -381,7 +381,6 @@
     details of reference formatting are available at:
     \url{http://www.acm.org/publications/submissions/latex_style}.
 \fi
-
 
 \balance{} 
 
