added TODO for goals section

--- a/proposal/goals.tex
+++ b/proposal/goals.tex
@@ -1,2 +1,3 @@
-\textbf{TODO:} Basically slide number six of the pitch. \\
+\textbf{TODO:} Basically slide number six of the pitch.
+This should result in clearly defined must- may- and must-not-haves that make it easy to measure our success afterwards. \\
 $\rightarrow$ Anna?
