added todo for related work

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -13,6 +13,8 @@
 % \usepackage{marginnote} \usepackage[shortlabels]{enumitem}
 % \usepackage{paralist}
 
+\newcommand{\todo}[1]{{\color{red}#1}}
+
 %% EXAMPLE BEGIN -- HOW TO OVERRIDE THE DEFAULT COPYRIGHT STRIP --
 % \copyrightinfo{Permission to make digital or hard copies of all or
 % part of this work for personal or classroom use is granted without
