--- a/proposal/related_work.tex
+++ b/proposal/related_work.tex
@@ -1,4 +1,6 @@
 \textbf{TODO:} Describe the currently existing technologies and their advantages and disadvantages. \\ 
 $\rightarrow$ Marc?
 
+\todo{also mention the overall approach that the position tracking and matches the aggregated data against a database of existing routes}
+
 testciting \cite{McIntosh:2016:EPH:2858036.2858093}
