changed order of sections

--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -94,15 +94,20 @@
 \category{H.5.m}{Information interfaces and presentation (e.g., HCI)}{Miscellaneous}
 
 \section{Introduction}
+	\label{sec:intro}
     \input{introduction.tex}
-\section{Goals}
+\section{Related Work}
+    \label{sec:relatedwork}
+    \input{related_work.tex}
+\section{Equipment}
+    \label{sec:equipment}
+    \input{equipment.tex}
+    \section{Goals}
+	\label{sec:goals}
     \input{goals.tex}
 \section{Milestones}
+	\label{sec:schedule}
     \input{milestones.tex}
-\section{Equipment}
-    \input{equipment.tex}
-\section{Related Work}
-    \input{related_work.tex}
 
 \makeatletter
 \def\@copyrightspace{\relax}
