--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -8,5 +8,5 @@ In particular, this works as follows:
 First, we utilize the data given by Beta-Cube to match the position of the hand or foot with the closest hold.
 Second, we use the Myo muscle tracker to determine if the hold was actually grabbed.
   
-\textbf{TODO:} Adapt to new technologies (e.g. no myo muscle tracker) and new goals (e.g. covered hands and feet). \\
-$\rightarrow$ DAVID will do in the very end
+\todo{Adapt to new technologies (e.g. no myo muscle tracker) and new goals (e.g. covered hands and feet). \\
+$\rightarrow$ DAVID will do in the very end}
