created structure for must-/may-/must-not-haves

--- a/proposal/goals.tex
+++ b/proposal/goals.tex
@@ -1,3 +1,15 @@
-\textbf{TODO:} Basically slide number six of the pitch.
-This should result in clearly defined must- may- and must-not-haves that make it easy to measure our success afterwards. \\
+\todo{Basically slide number six of the pitch.}
 $\rightarrow$ Anna?
+
+\subsection{Must-Haves}
+\begin{enumerate}
+	\item 
+\end{enumerate}
+\subsection{May-Haves}
+\begin{enumerate}
+	\item 
+\end{enumerate}
+\subsection{Must-Not-Haves}
+\begin{enumerate}
+	\item 
+\end{enumerate}
