--- a/proposal/milestones.tex
+++ b/proposal/milestones.tex
@@ -1,2 +1,7 @@
-\textbf{TODO:} Create nice picture and describe the individual milestones and deliverables. \\ 
-$\rightarrow$ Marc (picture) \& David (text)?
+\begin{description}
+	\item[June 16] Implementation of first drafts of MUST1 and MUST2
+	\item[June 30] Implementation of first drafts of MUST3 and MUST4
+	\item[July 14] Testing and finalization of the Must-Haves. Starting to work on May-Haves if possible
+	\item[July 28] Depending on the progress of the project more work on May-Haves
+	\item[August 11] Completion of final report
+\end{description}
