--- a/proposal/goals.tex
+++ b/proposal/goals.tex
@@ -1,5 +1,4 @@
-\todo{Basically slide number six of the pitch.}
-$\rightarrow$ Anna?
+To clearly define the scope of our project we set up a number of goals we want to accomplish in a Must-, May-, and Must-Not-Have format:
 
 \subsection{Must-Haves}
 \begin{description}
