--- a/proposal/main.tex
+++ b/proposal/main.tex
@@ -99,9 +99,9 @@
 \section{Related Work}
     \label{sec:relatedwork}
     \input{related_work.tex}
-\section{Equipment}
-    \label{sec:equipment}
-    \input{equipment.tex}
+\section{Implementation}
+    \label{sec:implementation}
+    \input{implementation.tex}
     \section{Goals}
 	\label{sec:goals}
     \input{goals.tex}
