--- a/proposal/related_work.tex
+++ b/proposal/related_work.tex
@@ -1,5 +1,4 @@
-\textbf{TODO:} Describe the currently existing technologies and their advantages and disadvantages. \\ 
-$\rightarrow$ Marc?
+\todo{Describe the currently existing technologies and their advantages and disadvantages. --> MARC} \\ 
 
 \todo{also mention the overall approach that the position tracking and matches the aggregated data against a database of existing routes}
 
