--- a/proposal/milestones.tex
+++ b/proposal/milestones.tex
@@ -5,3 +5,11 @@
 	\item[July 28] Depending on the progress of the project more work on May-Haves
 	\item[August 11] Completion of final report
 \end{description}
+
+A graphical representation of this schedule is depicted in Figure \ref{fig:gantt}.
+
+\begin{figure}
+  \centering
+  \includegraphics[width=1\columnwidth]{gantt.pdf}
+  \caption{Gantt diagramm depicting the schedule of this project.}~\label{fig:gantt}
+\end{figure}
