--- a/proposal/implementation.tex
+++ b/proposal/implementation.tex
@@ -1,3 +1,13 @@
 \todo{Describe our approach in detail --> ANNA}\\
+
+
+
 \todo{Describe the technical issues of the currently available technologies we want to use. --> FELIX}\\
+The main issue of the currently available image based systems is occlusion, because if you use a hold, which is in front of your body the camera system cannot detect this because it is a few meters away from the climbing wall.
+For the wearable tracker the major  problem is to show the climber how to climb a route.
+These tracker can detect which route was climb or if it was climbed before but they cannot give advice or help the climber to improve their skills.
+
 \todo{Mention all equipment we need in order to succeed}
+For the implementation of this hybrid approach we use the betaCube for the image analysis and MyoTracker for recognising muscle activity.
+The betaCube uses a infrared depth camera and a normal color camera to track the climber at the wall.
+The MyoTracker has myoelectric detectors and a gyroscopic sensors, so it can spot the small electric pulses the body uses to activate the muscles and furthermore it is able to recognise in which angle the arm is held.
