Added description of out approach

--- a/proposal/implementation.tex
+++ b/proposal/implementation.tex
@@ -1,3 +1,10 @@
 \todo{Describe our approach in detail --> ANNA}\\
+We are going to combine image analysis with muscle tracking to provide the technology that will allow climbers to define routes simply by climbing it.
+The betaCube is a system that includes a 3D camera, a projector and a processing unit.
+The betaCube uses image analysis approach and it will give us a general overview of a climbing wall and the location of holds.
+It can also match the position of hands and feet to holds on the wall but only if holds are not concealed by a climber.
+We will try to improve accuracy of route recognition by using muscle tracker in addition to existing technology.
+Muscle tracker measures electrical activity from muscles and therefore can show whether a hold was actually used.
+By combining muscular tracking with image analysis we will provide more reliable way of definig route than image analysis alone.
 \todo{Describe the technical issues of the currently available technologies we want to use. --> FELIX}\\
 \todo{Mention all equipment we need in order to succeed}
