--- a/proposal/implementation.tex
+++ b/proposal/implementation.tex
@@ -10,7 +10,7 @@ By combining muscular tracking with image analysis we will provide more reliable
 \todo{Describe the technical issues of the currently available technologies we want to use. --> FELIX}\\
 The main issue of the currently available image based systems is occlusion, because if you use a hold, which is in front of your body the camera system cannot detect this because it is a few meters away from the climbing wall.
 For the wearable tracker the major  problem is to show the climber how to climb a route.
-These tracker can detect which route was climb or if it was climbed before but they cannot give advice or help the climber to improve their skills.
+These tracker can detect which route was climbed or if it was climbed before but they cannot give advice or help the climber to improve their skills.
 
 \todo{Mention all equipment we need in order to succeed}\\
 For the implementation of this hybrid approach we use the betaCube for the image analysis and MyoTracker for recognising muscle activity.
