--- a/proposal/abstract.tex
+++ b/proposal/abstract.tex
@@ -6,7 +6,4 @@ The difficulty here is to provide a reliable detection of the holds grabbed.
 We tackle this issue using a hybrid approach based on visual analysis with a measurement of the muscle activity.
 In particular, this works as follows:
 First, we utilize the data given by Beta-Cube to match the position of the hand or foot with the closest hold.
-Second, we use the Myo muscle tracker to determine if the hold was actually grabbed.
-  
-\todo{Adapt to new technologies (e.g. no myo muscle tracker) and new goals (e.g. covered hands and feet). \\
-$\rightarrow$ DAVID will do in the very end}
+Second, we use the Myo muscle tracker (or similar) to determine if the hold was actually grabbed.
