--- a/proposal/introduction.tex
+++ b/proposal/introduction.tex
@@ -3,8 +3,8 @@ It allows to intuitively define new routes by climbing them and track the climbe
 In a second step the gathered statistical data can be used e.g.\ for automatic difficulty estimation.
 
 Climbing route recognition that allows recording of new routes heavily depends on reliably detecting which individual holds were used by the climber.
-Several approaches exist, most of which rely including smart holds (\todo{reference}) or visual detection (\todo{reference}).
-However, smart holds are rather expensive and visual detection suffers from reliability issues (\todo{reference}).
+Several approaches exist, most of which rely including smart holds \cite{Kistler:Online, Lechner:Online} or visual detection \cite{pub8245, Wiehr:2016:BET:2851581.2892393, Kajastila:2014:ACI:2611780.2581139, Kajastila:2014:ACI:2559206.2581139}.
+However, smart holds are rather expensive and visual detection suffers from reliability issues \cite{pub8245, Wiehr:2016:BET:2851581.2892393, Kajastila:2014:ACI:2611780.2581139, Kajastila:2014:ACI:2559206.2581139}.
 To overcome these we propose a hybrid approach that combines visual detection with a muscle tracker.
 The muscle tracker will allow us to identify if a hold was grabbed by the climber detecting if she flexed her muscles in arms and legs.
 The visual detection system matches the position of the hand or foot with the closest hold on the wall.
