--- a/final/main.tex
+++ b/final/main.tex
@@ -102,12 +102,12 @@
 \section{Implementation}
     \label{sec:implementation}
     \input{implementation.tex}
-    \section{Goals}
-	\label{sec:goals}
-    \input{goals.tex}
-\section{Milestones}
-	\label{sec:schedule}
-    \input{milestones.tex}
+\section{Evaluation}
+	\label{sec:evaluation}
+    \input{evaluation.tex}
+\section{Conclusion \& Future Work}
+	\label{sec:conclusion}
+    \input{conclusion.tex}
 
 \makeatletter
 \def\@copyrightspace{\relax}
