--- a/final/introduction.tex
+++ b/final/introduction.tex
@@ -1,6 +1,6 @@
 Recognizing climbing routes is crucial for many climbing-associated applications:
 It allows to intuitively define new routes by climbing them and track the climbed routes in order to measure training performance.
-In a second step the gathered statistical data can be used e.g.\ for automatic difficulty estimation.
+In a second step the gathered statistical data could be used e.g.\ for automatic difficulty estimation.
 
 Climbing route recognition that allows recording of new routes heavily depends on reliably detecting which individual holds were used by the climber.
 Several approaches exist, including smart holds \cite{Kistler:Online, Lechner:Online} or visual detection \cite{pub8245, Wiehr:2016:BET:2851581.2892393, Kajastila:2014:ACI:2611780.2581139, Kajastila:2014:ACI:2559206.2581139}.
